my-apps/homebridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: homebridge
spec:
  selector:
    app: homebridge
  ports:
  - port: 80
    targetPort: 8581
